--- a/quizz/package.json
+++ b/quizz/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nodemon": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
