--- a/quizz/package.json
+++ b/quizz/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
