--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-lazy-load-image-component": "^1.6.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
